--- a/tarea3DWESandreafueyo/src/main/resources/templates/registrarplanta.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/registrarplanta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrar Planta</title>
-    <link rel="stylesheet" th:href="@{/registrarpersona.css}">
+    <link rel="stylesheet" th:href="@{/css/registrarpersona.css}">
 </head>
 <body>
     <header>
