--- a/tarea3DWESandreafueyo/src/main/resources/templates/filtrarmensajes.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/filtrarmensajes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vivero La Laboral - Gestión mensajes</title>
-    <link rel="stylesheet" th:href="@{/filtrarmensajes.css}">
+    <link rel="stylesheet" th:href="@{/css/filtrarmensajes.css}">
 </head>
 <body>
     <header>
