--- a/tarea3DWESandreafueyo/src/main/resources/templates/index.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vivero La Laboral</title>
-    <link rel="stylesheet" th:href="@{/index.css}">
+    <link rel="stylesheet" th:href="@{/css/index.css}">
 </head>
     <header>
         <div class="logo">
@@ -21,6 +21,10 @@
 	    <a th:href="@{/iniciarsesion}" class="menu-item">
 	        <img th:src="@{/imagenes/persona.png}" alt="INICIAR SESION">
 	        <span>INICIAR SESIÓN</span>
+	    </a>
+	   	<a th:href="@{/registrarcliente}" class="menu-item">
+	        <img th:src="@{/imagenes/persona.png}" alt="REGISTRAR CLIENTE">
+	        <span>REGISTRAR CLIENTE</span>
 	    </a>
     </div>
 </body>
