--- a/tarea3DWESandreafueyo/src/main/resources/templates/iniciarsesion.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/iniciarsesion.html
@@ -1,30 +1,45 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión</title>
-    <link rel="stylesheet" th:href="@{/iniciarsesion.css}">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Iniciar Sesión</title>
+<link rel="stylesheet" th:href="@{/css/iniciarsesion.css}">
 </head>
-    <header>
-        <div class="logo"><img th:src="@{/imagenes/lalaboral.png}"></div>
-    </header>
+<header>
+	<div class="logo">
+		<img th:src="@{/imagenes/lalaboral.png}">
+	</div>
+</header>
 <body>
-    <div class="login-container">
-        <h2>INICIAR SESIÓN</h2>
-        <form th:action="@{/login}" method="post">
-            <label for="usuario">USUARIO:</label>
-            <input type="text" id="usuario" name="usuario" required>
+	<div class="login-container">
+		<h2>INICIAR SESIÓN</h2>
 
-            <label for="contrasena">CONTRASEÑA:</label>
-            <input type="password" id="contrasena" name="contrasena" required>
+		<form th:action="@{/login}" method="post">
+			<label for="username">USUARIO:</label> <input type="text"
+				id="username" name="username" required>
 
-            <button type="submit">enviar <span>&raquo;</span></button>
-        </form>
-        <div class="contenedorboton">
-       		<button onclick="window.history.back()">Volver</button>
-        </div>
-    </div>
+			<label for="password">CONTRASEÑA:</label> <input type="password"
+				id="password" name="password" required>
+
+			<button type="submit">
+				enviar <span>&raquo;</span>
+			</button>
+		</form>
+
+		<div th:if="${param.error}">
+			<p style="color: red;">Usuario o contraseña incorrectos</p>
+		</div>
+
+		<div th:if="${param.logout}">
+			<p style="color: green;">Has cerrado sesión correctamente</p>
+		</div>
+
+
+		<div class="contenedorboton">
+			<button onclick="window.history.back()">Volver</button>
+		</div>
+	</div>
 </body>
 
 </html>
