--- a/tarea3DWESandreafueyo/src/main/resources/templates/verplantas.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/verplantas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vivero La Laboral</title>
-    <link rel="stylesheet" th:href="@{/verplantas.css}">
+    <link rel="stylesheet" th:href="@{/css/verplantas.css}">
 </head>
 <body>
     <header>
