Commit menú cliente y restricciones alta cliente

--- a/tarea3DWESandreafueyo/src/main/resources/templates/index.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
 	        <span>INICIAR SESIÓN</span>
 	    </a>
 	   	<a th:href="@{/registrarcliente}" class="menu-item">
-	        <img th:src="@{/imagenes/persona.png}" alt="REGISTRAR CLIENTE">
+	        <img th:src="@{/imagenes/ccliente.png}" alt="REGISTRAR CLIENTE">
 	        <span>REGISTRAR CLIENTE</span>
 	    </a>
     </div>
