--- a/tarea3DWESandreafueyo/src/main/resources/templates/registrarpersona.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/registrarpersona.html
@@ -1,48 +1,48 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrar usuario</title>
-    <link rel="stylesheet" th:href="@{/css/registrarpersona.css}">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Registrar usuario</title>
+<link rel="stylesheet" th:href="@{/css/registrarpersona.css}">
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img th:src="@{/imagenes/lalaboral.png}" alt="Logo">
-        </div>
-    </header> 
-    <main>
-        <h2>MENÚ DEL ADMINISTRADOR</h2>
-        <h3>REGISTRO DE NUEVO USUARIO</h3>
-        
-        <div class="form-container">
-        <p>Introduzca los datos del nuevo usuario.</p>
-            <form th:action="@{/registrarpersona}" th:object="${credenciales}" method="post">
-                <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" name="nombre" th:field="*{persona.nombre}" required>
+	<header>
+		<div class="logo">
+			<img th:src="@{/imagenes/lalaboral.png}" alt="Logo">
+		</div>
+	</header>
+	<main>
+		<h2>MENÚ DEL ADMINISTRADOR</h2>
+		<h3>REGISTRO DE NUEVO USUARIO</h3>
 
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" th:field="*{persona.email}" required>
+		<div class="form-container">
+			<p>Introduzca los datos del nuevo usuario.</p>
+			<form th:action="@{/registrarpersona}" th:object="${credenciales}"
+				method="post">
+				<label for="nombre">Nombre:</label> <input type="text" id="nombre"
+					name="nombre" th:field="*{persona.nombre}" required> <label
+					for="email">Email:</label> <input type="email" id="email"
+					name="email" th:field="*{persona.email}" required> <label
+					for="usuario">Usuario:</label> <input type="text" id="usuario"
+					name="usuario" th:field="*{usuario}" required> <label
+					for="contrasena">Contraseña:</label> <input type="password"
+					id="contrasena" name="contrasena" th:field="*{password}" required>
 
-                <label for="usuario">Usuario:</label>
-                <input type="text" id="usuario" name="usuario" th:field="*{usuario}" required>
-
-                <label for="contrasena">Contraseña:</label>
-                <input type="password" id="contrasena" name="contrasena" th:field="*{password}" required>
-
-                <button type="submit">Enviar <span>&raquo;</span></button>
-                <br>
+				<button type="submit">
+					Enviar <span>&raquo;</span>
+				</button>
+				<br>
 				<div class="contenedorboton">
-				    <a th:href="@{/menuadmin}">
-				        <button type="button">Volver</button>
-				    </a>
+					<a th:href="@{/menuadmin}">
+						<button type="button">Volver</button>
+					</a>
 				</div>
-            </form>
-            <p th:if="${error}" th:text="${error}" style="color: red;"></p>
-            <p th:if="${exito}" th:text="${exito}" style="color: green;"></p>
-        </div>
-    </main>
+			</form>
+			<p th:if="${error}" th:text="${error}" style="color: red;"></p>
+			<p th:if="${exito}" th:text="${exito}" style="color: green;"></p>
+		</div>
+	</main>
 
 </body>
 </html>
