--- a/tarea3DWESandreafueyo/src/main/resources/templates/menuadmin.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/menuadmin.html
@@ -30,13 +30,17 @@
             <img th:src="@{/imagenes/ejemplares.png}" alt="GESTIÓN DE EJEMPLARES">
             <span>4. GESTIÓN DE EJEMPLARES</span>
         </a>
+        <a th:href="@{/gestionstock}" class="menu-item">
+            <img th:src="@{/imagenes/casa.png}" alt="CERRAR SESIÓN">
+            <span>5. GESTION STOCK</span>
+        </a>
         <a th:href="@{/gestionmensajes}" class="menu-item">
             <img th:src="@{/imagenes/mensajes.png}" alt="GESTIÓN DE MENSAJES">
-            <span>5. GESTIÓN DE MENSAJES</span>
+            <span>6. GESTIÓN DE MENSAJES</span>
         </a>
-        <a th:href="@{/cerrarsesion}" class="menu-item">
+        <a th:href="@{/logout}" class="menu-item">
             <img th:src="@{/imagenes/cerrarsesion.png}" alt="CERRAR SESIÓN">
-            <span>6. CERRAR SESIÓN</span>
+            <span>7. CERRAR SESIÓN</span>
         </a>
     </div>
 </body>
