--- a/tarea3DWESandreafueyo/src/main/resources/templates/menucliente.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/menucliente.html
@@ -17,14 +17,11 @@
 		<a th:href="@{/realizarpedido}" class="menu-item"> <img
 			th:src="@{/imagenes/realizarp.png}" alt="REALIZAR PEDIDO"> <span>1.
 				REALIZAR PEDIDO</span>
-		</a> <a th:href="@{/vercarrito}" class="menu-item"> <img
-			th:src="@{/imagenes/pedido.png}" alt="VER CARRITO"> <span>2.
-				VER CARRITO</span>
 		</a> <a th:href="@{/finalizarpedido}" class="menu-item"> <img
 			th:src="@{/imagenes/finalizarpedido.png}" alt="CERRAR SESIÓN">
-			<span>3. FINALIZAR PEDIDO</span>
-		</a> <a th:href="@{/cerrarsesion}" class="menu-item"> <img
-			th:src="@{/imagenes/cerrarsesion.png}" alt="CERRAR SESIÓN"> <span>4.
+			<span>2. FINALIZAR PEDIDO</span>
+		</a> <a th:href="@{/logout}" class="menu-item"> <img
+			th:src="@{/imagenes/cerrarsesion.png}" alt="CERRAR SESIÓN"> <span>3.
 				CERRAR SESIÓN</span>
 		</a>
 	</div>
