--- a/tarea3DWESandreafueyo/src/main/resources/templates/menupersonal.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/menupersonal.html
@@ -22,13 +22,17 @@
             <img th:src="@{/imagenes/ejemplares.png}" alt="GESTIÓN DE EJEMPLARES">
             <span>2. GESTIÓN DE EJEMPLARES</span>
         </a>
+        <a th:href="@{/gestionstock}" class="menu-item">
+            <img th:src="@{/imagenes/casa.png}" alt="CERRAR SESIÓN">
+            <span>3. GESTION STOCK</span>
+        </a>
         <a th:href="@{/gestionmensajes}" class="menu-item">
             <img th:src="@{/imagenes/mensajes.png}" alt="GESTIÓN DE MENSAJES">
-            <span>3. GESTIÓN DE MENSAJES</span>
+            <span>4. GESTIÓN DE MENSAJES</span>
         </a>
-        <a th:href="@{/cerrarsesion}" class="menu-item">
+        <a th:href="@{/logout}" class="menu-item">
             <img th:src="@{/imagenes/cerrarsesion.png}" alt="CERRAR SESIÓN">
-            <span>4. CERRAR SESIÓN</span>
+            <span>5. CERRAR SESIÓN</span>
         </a>
     </div>
 </body>
