--- a/tarea3DWESandreafueyo/src/main/resources/templates/vercarrito.html
+++ b/tarea3DWESandreafueyo/src/main/resources/templates/vercarrito.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrito de Pedido</title>
-	<link rel="stylesheet" th:href="@{/css/verplantas.css}">
+	<link rel="stylesheet" th:href="@{/css/finalizarpedido.css}">
 </head>
+<header>
+		<div class="logo">
+			<img th:src="@{/imagenes/lalaboral.png}">
+		</div>
+	</header>
 <body>
-    <h2>Carrito de Pedido</h2>
+    <h1>Carrito de Pedido</h1>
+    <div class="cliente">
     <table>
         <thead>
             <tr>
@@ -29,9 +35,22 @@
             </tr>
         </tbody>
     </table>
-    <form th:action="@{/vaciarcarrito}" method="post">
-        <button type="submit">Vaciar Carrito</button>
-    </form>
-    <a href="/realizarpedido">Seguir comprando</a>
+    </div>
+	<div class="menu">
+<form th:action="@{/vaciarcarrito}" method="post" style="display: inline;" class="menu-item">
+    <button type="submit" class="carrito" style="border: none; background: none; cursor: pointer; padding: 0;">
+        <img th:src="@{/imagenes/pedido.png}" alt="VACIAR CARRITO">
+        <span>1. Vaciar Carrito</span>
+    </button>
+</form>
+		<a th:href="@{/realizarpedido}" class="menu-item"> <img
+			th:src="@{/imagenes/pedido.png}" alt="SEGUIR COMPRANDO"> <span>2. SEGUIR COMPRANDO</span>
+		</a>
+		<a th:href="@{/finalizarpedido}" class="menu-item"> <img
+			th:src="@{/imagenes/finalizarpedido.png}" alt="FINALIZAR PEDIDO"> <span>3. FINALIZAR PEDIDO</span>
+		</a>
+	</div>
+
+
 </body>
 </html>
